# Gtk4AppBookStore

./: .gitignore  CMakeLists.txt  README.md  main.c
Util/: ConfigConn.cpp  ConfigConn.h  DataConn.cpp  DataConn.h  DbConn.cpp  DbConn.h  Print_Types.txt  ShowMsg.cpp  ShowMsg.h  TimeUtil.cpp  TimeUtil.h  dbgdirfile.cpp  dbgdirfile.h  mngdfilesettings.cpp  mngdfilesettings.h
app/: .ninja_deps  .ninja_log  CMakeCache.txt  Gtk4AppBookStore  build.ninja  cmake_install.cmake  qtcsettings.cmake
app/.cmake/api/v1/reply/: cache-v2-5d946546c281c6f1d881.json  cmakeFiles-v1-11995b72e2daf013f4b6.json  codemodel-v2-56d93a11116f3eb4771a.json  index-2025-08-12T12-33-54-0395.json  target-Gtk4AppBookStore-Release-02d89600afd9df985c23.json
app/.qtc_clangd/: compile_commands.json
app/.qtc_clangd/.cache/clangd/index/: __stdarg___gnuc_va_list.h.442FC0C938EF3ABF.idx  __stdarg___va_copy.h.1F2F10AAE3C2F28A.idx  __stdarg_header_macro.h.4878A1D3E236F1A0.idx  __stdarg_va_arg.h.D789CB3420323DD7.idx  __stdarg_va_copy.h.F50268EB4EAACF4D.idx  __stdarg_va_list.h.016A7D20D15943F3.idx  __stddef_header_macro.h.80812CC37FAD51D3.idx  __stddef_max_align_t.h.8DF9E03BFB703F94.idx  __stddef_null.h.3386B2A0AACD310C.idx  __stddef_offsetof.h.5474D42037BCFD59.idx  __stddef_ptrdiff_t.h.B2708265C1EC06AE.idx  __stddef_size_t.h.CFF40B18E447786C.idx  __stddef_wchar_t.h.4CB2F8B90E8E8D74.idx  alert_handler.c.2E70BF22C76B01BC.idx  alert_handler.h.F726584FB39A0175.idx  alloca.h.793370BF9878CFB6.idx  book-struct-util.h.C103AEFAEE801349.idx  bookstore.c.FA94352F39198F89.idx  bookstore.h.9A5A807E336ED0D4.idx  bookstore_dao.c.34E3CBA7682F94CC.idx  bookstore_dao.h.B643786DA0B90200.idx  cairo-deprecated.h.0DB1AEB3E92803B3.idx  cairo-features.h.A60AD5AFBED8943E.idx  cairo-version.h.C75018D1CC199933.idx  cairo.h.3F27A39E50E6B7CA.idx  cdefs.h.E4D450DF98C1338F.idx  ctype.h.B268CEA0CECCFC59.idx  dirent.h.5B5B107C92265F7A.idx  dirent.h.D89913C90A5A044D.idx  dirent_ext.h.370E1355AD336D8C.idx  emmintrin.h.E204AD41711F13C9.idx  errno.h.19BCCCD58DA5623E.idx  error_log.h.7F847C935D97F7E7.idx  features.h.5A4ED7C80201A723.idx  float.h.C015F7D535377E1B.idx  gaction.h.758F4F2526FF7AFB.idx  gactiongroup.h.A592B2B11849C02F.idx  gactiongroupexporter.h.A4A09BC3867372F4.idx  gactionmap.h.85A09BAB29E8D2FF.idx  galloca.h.54B042F70E453C31.idx  (+770 more)
dao/: bookstore_dao.c  bookstore_dao.h
data/: style.css
gui/: gtkaddtolist.xml
gui/css/: style.css
src/: bookstore.c  bookstore.h  menu-app.c  menu-app.h
util/: book_store.sql  filtermodel.xml  gtk4appdata.sql  gtkaddtolist.ui  gtkaddtolist.xml  mysql_utils.c  mysql_utils.h  util.c  util.h
util-app/: alert_handler.c  alert_handler.h  book-struct-util.h
util-db/: book_store.sql  mysql_utils.c  mysql_utils.h  util.c  util.h
util-dbg/: error_log.h  show-msg.c  show-msg.h
